[gd_scene load_steps=19 format=3 uid="uid://b3ryclmfsj722"]

[ext_resource type="Script" path="res://modules/Reusables/JustClock.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cql47epxce3qy" path="res://modules/Reusables/parts/ThoughFields.tscn" id="2"]
[ext_resource type="Script" path="res://fonts/kashikan-DSEG/kashikan-DSEG.gd" id="3"]
[ext_resource type="FontFile" uid="uid://jadq5vvq880w" path="res://font/fonts-DSEG/DSEG7-Classic/DSEG7Classic-BoldItalic.ttf" id="4"]
[ext_resource type="FontFile" uid="uid://5caadhmmuwes" path="res://font/fonts-DSEG/DSEG14-Modern/DSEG14Modern-Italic.ttf" id="5"]
[ext_resource type="FontFile" uid="uid://bde54mab883au" path="res://font/fonts-DSEG/DSEG7-Modern/DSEG7Modern-Italic.ttf" id="6"]
[ext_resource type="FontFile" uid="uid://by5yc2yibtd75" path="res://font/fonts-DSEG/DSEG7-Classic/DSEG7Classic-Italic.ttf" id="7"]
[ext_resource type="FontFile" uid="uid://bujn7awtgf3bo" path="res://font/fonts-DSEG/DSEG7-Modern-MINI/DSEG7ModernMini-Regular.ttf" id="8"]

[sub_resource type="FontFile" id="1"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "14Seg"
chooseForm = "Modern"
miniForm = false
fontWeight = "Italic"
Fonts = {}

[sub_resource type="FontFile" id="2"]
resource_local_to_scene = true
fallbacks = Array[Font]([ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Modern"
miniForm = false
fontWeight = "Italic"
Fonts = {}

[sub_resource type="FontFile" id="3"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Classic"
miniForm = false
fontWeight = "BoldItalic"
Fonts = {}

[sub_resource type="FontFile" id="4"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Classic"
miniForm = false
fontWeight = "Italic"
Fonts = {}

[sub_resource type="FontFile" id="5"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Modern"
miniForm = true
fontWeight = "Regular"
Fonts = {}

[sub_resource type="FontFile" id="6"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5"), ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "14Seg"
chooseForm = "Modern"
miniForm = false
fontWeight = "Italic"
Fonts = {}

[sub_resource type="FontFile" id="7"]
resource_local_to_scene = true
fallbacks = Array[Font]([ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6"), ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Modern"
miniForm = false
fontWeight = "Italic"
Fonts = {}

[sub_resource type="FontFile" id="8"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4"), ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Classic"
miniForm = false
fontWeight = "BoldItalic"
Fonts = {}

[sub_resource type="FontFile" id="9"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7"), ExtResource("7")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Classic"
miniForm = false
fontWeight = "Italic"
Fonts = {}

[sub_resource type="FontFile" id="10"]
resource_local_to_scene = true
resource_name = "kashikan-DSEG"
fallbacks = Array[Font]([ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
script = ExtResource("3")
chooseMode = "7Seg"
chooseForm = "Modern"
miniForm = true
fontWeight = "Regular"
Fonts = {}

[node name="JustClock" type="Control"]
custom_minimum_size = Vector2(540, 270)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -135.0
offset_right = 270.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Bekgron" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BehindFields" parent="." instance=ExtResource("2")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -120.0
offset_right = 270.0
offset_bottom = 120.0

[node name="Day" parent="BehindFields/topField" index="0"]
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = SubResource("1")
text = "~~~."
fontColor = Color(0.1, 0.1, 0.1, 1)

[node name="Date" parent="BehindFields/topField" index="1"]
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = SubResource("2")
text = "88-88-8888"
fontColor = Color(0.1, 0.1, 0.1, 1)

[node name="HourMin" parent="BehindFields/bottomField" index="0"]
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = SubResource("3")
text = "88 88"
fontColor = Color(0.1, 0.1, 0.1, 1)

[node name="Second" parent="BehindFields/bottomField" index="1"]
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = SubResource("4")
text = ":88"
fontColor = Color(0.1, 0.1, 0.1, 1)

[node name="UnixTime" parent="BehindFields/underField" index="0"]
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = SubResource("5")
text = "88888888888888888888"
fontColor = Color(0.1, 0.1, 0.1, 1)

[node name="ThoughFields" parent="." instance=ExtResource("2")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -135.0
offset_right = 270.0
offset_bottom = 135.0

[node name="Day" parent="ThoughFields/topField" index="0"]
theme_override_colors/font_color = Color(0.678431, 1, 0.184314, 1)
theme_override_fonts/font = SubResource("6")
text = "SEL."
fontColor = Color(0.678431, 1, 0.184314, 1)

[node name="Date" parent="ThoughFields/topField" index="1"]
theme_override_colors/font_color = Color(0.678431, 1, 0.184314, 1)
theme_override_fonts/font = SubResource("7")
text = "30-05-2023"
fontColor = Color(0.678431, 1, 0.184314, 1)

[node name="HourMin" parent="ThoughFields/bottomField" index="0"]
theme_override_colors/font_color = Color(0.678431, 1, 0.184314, 1)
theme_override_fonts/font = SubResource("8")
text = "01:13"
fontColor = Color(0.678431, 1, 0.184314, 1)

[node name="Second" parent="ThoughFields/bottomField" index="1"]
theme_override_colors/font_color = Color(0.678431, 1, 0.184314, 1)
theme_override_fonts/font = SubResource("9")
text = " 47"
fontColor = Color(0.678431, 1, 0.184314, 1)

[node name="UnixTime" parent="ThoughFields/underField" index="0"]
theme_override_colors/font_color = Color(0.678431, 1, 0.184314, 1)
theme_override_fonts/font = SubResource("10")
text = "00000000001685384027"
fontColor = Color(0.678431, 1, 0.184314, 1)

[editable path="BehindFields"]
[editable path="ThoughFields"]
